refactor(test.unit.controller.*): refactor controller tests