@@ -1,166 +1,159 @@
 package com.neptune.boards.tests.unit.controller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.neptune.boards.controller.ProjectController;
 import com.neptune.boards.dto.project.ProjectRequestDTO;
 import com.neptune.boards.dto.project.ProjectResponseDTO;
-import com.neptune.boards.entity.Project;
 import com.neptune.boards.exception.NeptuneBoardsException;
 import com.neptune.boards.service.ProjectService;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.http.ResponseEntity;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
-@WebMvcTest(ProjectController.class)
-class ProjectControllerTest {
-    @Autowired
-    private MockMvc mockMvc;
+public class ProjectControllerTest {
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
-    @MockBean
+    @Mock
     private ProjectService service;
 
-    private Project projectTest;
-    private final UUID projectUUID = UUID.randomUUID();
-    private ProjectRequestDTO requestBoardTest;
-    private ProjectResponseDTO responseDTOTest;
+    @InjectMocks
+    private ProjectController controller;
+
+    private ProjectRequestDTO projectRequest;
+    private ProjectResponseDTO projectResponse;
+    private UUID projectUUID;
 
     @BeforeEach
     void setUp() {
-        this.projectTest = Project.builder()
-                .UUID(this.projectUUID)
-                .name("Test project")
-                .description("Test project description")
-                .createdAt(LocalDate.now())
-                .updatedAt(LocalDate.now())
-                .build();
-
-        this.requestBoardTest = ProjectRequestDTO.builder()
-                .name(this.projectTest.getName())
-                .description(this.projectTest.getDescription())
-                .build();
-
-        this.responseDTOTest = ProjectResponseDTO.builder()
-                .name(this.projectTest.getName())
-                .description(this.projectTest.getDescription())
-                .createdAt(this.projectTest.getCreatedAt())
-                .updatedAt(this.projectTest.getUpdatedAt())
-                .build();
+        MockitoAnnotations.openMocks(this);
+        projectUUID = UUID.randomUUID();
+        projectRequest = new ProjectRequestDTO("Test Project", "Test Description", List.of());
+        projectResponse = new ProjectResponseDTO(projectUUID, "Test Project", "Test Description", LocalDate.now(), LocalDate.now(), List.of());
     }
 
     @Test
-    @DisplayName("Unit Test: Create a Project: should return the created project")
-    public void createBoardControllerTest() throws Exception {
-        String boardRequestJson = objectMapper.writeValueAsString(requestBoardTest);
+    @DisplayName("Unit Test: Create Project: should create project successfully")
+    void createProjectSuccessTest() {
+        when(service.createBoard(any(UUID.class), any(ProjectRequestDTO.class))).thenReturn(projectResponse);
 
-        Mockito.when(service.createBoard(this.projectUUID, requestBoardTest)).thenReturn(this.responseDTOTest);
+        ResponseEntity<ProjectResponseDTO> response = controller.createProject(projectUUID, projectRequest);
 
-        mockMvc.perform(post("/api/project/" + this.projectTest)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(boardRequestJson))
-                .andExpect(status().isCreated())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON));
+        assertNotNull(response);
+        assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        assertEquals(projectResponse, response.getBody());
+        verify(service, times(1)).createBoard(projectUUID, projectRequest);
     }
 
     @Test
-    @DisplayName("Exception Project not found: should return not found if project does not exist")
-    public void notFoundGetBoardControllerTest() throws Exception {
-        UUID uuid = UUID.randomUUID();
-        Mockito.when(service.getBoard(uuid)).thenThrow(new NeptuneBoardsException("project not found", HttpStatus.NOT_FOUND, this.getClass()));
+    @DisplayName("Unit Test: Get Project: should return project when found")
+    void getProjectSuccessTest() throws NeptuneBoardsException {
+        when(service.getBoard(any(UUID.class))).thenReturn(projectResponse);
 
-        mockMvc.perform(get("/api/project/" + uuid)
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isNotFound());
+        ResponseEntity<ProjectResponseDTO> response = controller.getProject(projectUUID);
+
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(projectResponse, response.getBody());
+        verify(service, times(1)).getBoard(projectUUID);
     }
 
     @Test
-    @DisplayName("Get Project by UUID: should return project")
-    public void getBoardControllerTest() throws Exception {
-        Mockito.when(service.getBoard(this.projectUUID)).thenReturn(this.responseDTOTest);
+    @DisplayName("Unit Test: Get Project: should throw exception if project not found")
+    void getProjectNotFoundTest() throws NeptuneBoardsException {
+        when(service.getBoard(any(UUID.class))).thenThrow(new NeptuneBoardsException("Project not found", HttpStatus.NOT_FOUND, ProjectController.class));
 
-        mockMvc.perform(get("/api/project/" + projectTest.getUUID())
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
+        NeptuneBoardsException exception = assertThrows(
+                NeptuneBoardsException.class,
+                () -> controller.getProject(projectUUID)
+        );
+
+        assertEquals("Project not found", exception.getMessage());
+        assertEquals(HttpStatus.NOT_FOUND, exception.getStatus());
+        assertEquals(ProjectController.class, exception.getOriginClass());
+        verify(service, times(1)).getBoard(projectUUID);
     }
 
     @Test
-    @DisplayName("Get All Boards: should return list of boards")
-    public void testGetAllboards() throws Exception {
-        List<ProjectResponseDTO> boards = Arrays.asList(ProjectResponseDTO.builder().uuid(UUID.randomUUID()).name("Board1").build(), ProjectResponseDTO.builder().uuid(UUID.randomUUID()).name("Board2").build());
-        Mockito.when(service.getAllBoards()).thenReturn(boards);
+    @DisplayName("Unit Test: Get All Projects: should return list of projects")
+    void getAllProjectsSuccessTest() {
+        when(service.getAllBoards()).thenReturn(List.of(projectResponse));
 
-        mockMvc.perform(get("/api/project/list")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(2))
-                .andExpect(jsonPath("$[0].name").value("Board1"))
-                .andExpect(jsonPath("$[1].name").value("Board2"));
+        ResponseEntity<List<ProjectResponseDTO>> response = controller.getAllProjects();
+
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertFalse(response.getBody().isEmpty());
+        assertEquals(1, response.getBody().size());
+        verify(service, times(1)).getAllBoards();
     }
 
     @Test
-    @DisplayName("Delete Boards by ID: should delete project if found")
-    public void testDeleteboardById() throws Exception {
-        Mockito.when(service.deleteBoard(this.projectUUID)).thenReturn(this.responseDTOTest);
+    @DisplayName("Unit Test: Delete Project: should delete project successfully")
+    void deleteProjectSuccessTest() throws NeptuneBoardsException {
+        when(service.deleteBoard(any(UUID.class))).thenReturn(projectResponse);
 
-        mockMvc.perform(delete("/api/project/" + this.projectTest.getUUID())
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value(this.projectTest.getName()));
+        ResponseEntity<ProjectResponseDTO> response = controller.deleteProject(projectUUID);
+
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(projectResponse, response.getBody());
+        verify(service, times(1)).deleteBoard(projectUUID);
     }
 
     @Test
-    @DisplayName("Delete Boards by UUID: should return not found if project does not exist")
-    public void testDeleteboardByIdNotFound() throws Exception {
-        Mockito.when(service.deleteBoard(this.projectUUID)).thenThrow(new NeptuneBoardsException("Project not found", HttpStatus.NOT_FOUND, this.getClass()));
+    @DisplayName("Unit Test: Delete Project: should throw exception if project not found")
+    void deleteProjectNotFoundTest() throws NeptuneBoardsException {
+        when(service.deleteBoard(any(UUID.class))).thenThrow(new NeptuneBoardsException("Project not found", HttpStatus.NOT_FOUND, ProjectController.class));
 
-        mockMvc.perform(delete("/api/project/" + this.projectUUID)
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isNotFound());
+        NeptuneBoardsException exception = assertThrows(
+                NeptuneBoardsException.class,
+                () -> controller.deleteProject(projectUUID)
+        );
+
+        assertEquals("Project not found", exception.getMessage());
+        assertEquals(HttpStatus.NOT_FOUND, exception.getStatus());
+        assertEquals(ProjectController.class, exception.getOriginClass());
+        verify(service, times(1)).deleteBoard(projectUUID);
     }
 
     @Test
-    @DisplayName("Update Project: should return the updated project")
-    @Disabled
-    public void testUpdateBoard() throws Exception {
-        UUID uuid = projectTest.getUUID();
-        ProjectResponseDTO updatedBoard = ProjectResponseDTO.builder()
-                .uuid(uuid)
-                .name("Updated Project")
-                .description(projectTest.getDescription())
-                .createdAt(projectTest.getCreatedAt())
-                .updatedAt(LocalDate.now())
-                .build();
+    @DisplayName("Unit Test: Update Project: should update project successfully")
+    void updateProjectSuccessTest() throws NeptuneBoardsException {
+        when(service.updateBoard(any(UUID.class), any(ProjectRequestDTO.class))).thenReturn(projectResponse);
 
-        ProjectRequestDTO updateRequest = ProjectRequestDTO.builder().name("Updated Project").build();
+        ResponseEntity<ProjectResponseDTO> response = controller.updateProject(projectUUID, projectRequest);
 
-        // Mock the service to return the updated project when the updateBoard method is called
-        Mockito.when(service.updateBoard(uuid, updateRequest)).thenReturn(updatedBoard);
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(projectResponse, response.getBody());
+        verify(service, times(1)).updateBoard(projectUUID, projectRequest);
+    }
 
-        // Perform the PUT request and verify the response
-        mockMvc.perform(put("/api/project/" + uuid)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(updateRequest)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value(updatedBoard.getName()))
-                .andExpect(jsonPath("$.description").value(updatedBoard.getDescription()))
-                .andExpect(jsonPath("$.UUID").value(updatedBoard.getUuid().toString()));
+    @Test
+    @DisplayName("Unit Test: Update Project: should throw exception if project not found")
+    void updateProjectNotFoundTest() throws NeptuneBoardsException {
+        when(service.updateBoard(any(UUID.class), any(ProjectRequestDTO.class))).thenThrow(new NeptuneBoardsException("Project not found", HttpStatus.NOT_FOUND, ProjectController.class));
+
+        NeptuneBoardsException exception = assertThrows(
+                NeptuneBoardsException.class,
+                () -> controller.updateProject(projectUUID, projectRequest)
+        );
+
+        assertEquals("Project not found", exception.getMessage());
+        assertEquals(HttpStatus.NOT_FOUND, exception.getStatus());
+        assertEquals(ProjectController.class, exception.getOriginClass());
+        verify(service, times(1)).updateBoard(projectUUID, projectRequest);
     }
 }
